Set up CI with Azure Pipelines
[skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,6 +4,15 @@
     azureSubscription: 'Azure subscription 1(8fa70147-7f4b-4b90-951c-c2000054c769)'
     appType: 'webAppLinux'
     appName: 'AZ-DEVOPS-HW-D3-APP'
+    deployToSlotOrASE: true
+    resourceGroupName: 'AZ-DEVOPS-HW-D3-RG'
+    slotName: 'production'
+    package: '$(System.DefaultWorkingDirectory)/**/*.zip'
+- task: AzureWebApp@1
+  inputs:
+    azureSubscription: 'Azure subscription 1(8fa70147-7f4b-4b90-951c-c2000054c769)'
+    appType: 'webAppLinux'
+    appName: 'AZ-DEVOPS-HW-D3-APP'
     package: '$(System.DefaultWorkingDirectory)/**/*.zip'
 - task: Maven@4
   inputs:
